      Jakub Wilk for spotting those.

  * debian/copyright:
    + [NT] Added Jakub Wilk to maintainers.
  * debian/rules:
    + [JW] Use LC_ALL rather than LANG, since LC_ALL overrules
      LANG.

  * doc/lintian.xml:
    + [NT] Removed duplicate "allowed to" in same sentence.
  * doc/README.developers:
    + [NT] New file.  Thanks to Jeremiah C. Foster for the initial
      contribution.

  * lib/Util.pm:
    + [JW] Use LC_ALL rather than LANG, since LC_ALL overrules
      LANG.
  * lib/Lintian/Collect/Source.pm:
    + [NT] Removed a requirement for fields that was not needed.
  * lib/Lintian/Collect/Package.pm:
    + [JW,NT] Replace use of fail with croak.  (Closes: #637741)
  * lib/Lintian/Profile.pm:
    + [NT] Reject profiles containing an unknown field.

  * private/*:
    + [JW] Use LC_ALL rather than LANG, since LC_ALL overrules
      LANG.

  * reporting/harness:
    + [NT] Added missing import statement.

  * t/*:
    + [JW,NT] Fixed test failures caused by unpacking the source
      with a umask different from 0022.  (Closes: #637649)

 -- Niels Thykier <niels@thykier.net>  Wed, 10 Aug 2011 21:09:24 +0200

lintian (2.5.2) unstable; urgency=low

  * Summary of tag changes:
    + Added:
      - debian-rules-uses-deprecated-makefile
      - debian-rules-uses-or-modifies-user-only-variable
      - duplicate-changelog-files
      - package-has-long-file-name
      - source-package-component-has-long-file-name
      - udeb-uses-non-gzip-data-tarball
      - upstart-job-in-etc-init.d-not-registered-via-update-rc.d
    + Removed:
      - calls-suidperl-directly
      - suid-perl-script-but-no-perl-suid-dep

  * checks/*:
    + [NT] Migrated to use new methods in the Lintian::Collect
      interfaces rather than accessing the Lab directly.
    + [NT] Removed "fields" from Needs-Info.
  * checks/{debconf,conffiles}.desc:
    + [NT] Added missing bin-pkg-control Needs-Info.
  * checks/{cruft,fields}{,.desc}: