@@ -154,6 +154,7 @@ sub new {
         display_source       => {},
         files                => {},
         non_overridable_tags => {},
+        ignored_overrides    => {},
         only_issue           => {},
         respect_display      => 1,
         show_experimental    => 0,
@@ -537,7 +538,7 @@ file cannot be opened.
 
 sub file_overrides {
     my ($self, $overrides) = @_;
-    my $ignored = $self->{non_overridable_tags};
+    my $noover = $self->{non_overridable_tags};
     unless (defined $self->{current}) {
         die 'no current file when adding overrides';
     }
@@ -582,7 +583,10 @@ sub file_overrides {
                 }
                 next unless $found;
             }
-            next if $ignored->{$tag};
+            if ( $noover->{$tag} ) {
+                $self->{ignored_overrides}{$tag}++;
+                next;
+            }
             $extra = '' unless defined $extra;
             $info->{overrides}{$tag}{$extra} = 0;
         } else {
@@ -746,11 +750,24 @@ Marks all tags (given as arguments) for non-overridable.
 
 sub non_overridable_tags {
     my ($self, @tags) = @_;
-    my $ignored = $self->{non_overridable_tags};
+    my $noover = $self->{non_overridable_tags};
     foreach my $tag (@tags){
-        $ignored->{$tag} = 1;
+        $noover->{$tag} = 1;
     }
     return 1;
+}
+
+=item ignored_overrides()
+
+Returns a hash of tags, for which overrides have been ignored.  The
+keys are tag names and the value is the number of overrides that has
+been ignored.
+
+=cut
+
+sub ignored_overrides {
+    my ($self) = @_;
+    return $self->{ignored_overrides};
 }
 
 =item respect_display_level([BOOL])
